static/css/restyle.less
/* ... */
.site-balloon {
    display: none !important;
}

#promos {
    width: 960px;
    display: none !important;
    height: 0 !important;
    min-height: 0 !important;
    margin-left: -210px;
    margin-bottom: 15px;
    visibility: visible !important;
    display: block !important;
    opacity: 1 !important;
}
#promos, #promos li > div, #promos > div {
    border-radius: 0;
}
#promos .feature {
    border-radius: 0;
}
.island {
    background: none;
    border-radius: 0;
    border: 0;
    box-shadow: none;
}
.primary.island {
    border-top: solid 1px @primary-blue;
}
#promos .promo-purple {
    background: none;
}
/* Featured/Monthly Add-on background modification */
#featured-addon, #monthly {
    background: none;

    &:before {
        content: "";
        display: block;
        position: absolute;
        z-index:0;
        top: 0;
        left: 0;
        width:100%;
        height:100%;
        background-image: url(https://addons.cdn.mozilla.net/static/img/zamboni/discovery_pane/promos/monthly-bg.png?eb06c0f);
        background-size: cover;
        background-position: center;
        background-repeat: no-repeat;
        filter: contrast(170%) grayscale(100%);
        mix-blend-mode: multiply;
        opacity: 0.3;
    }
}

#featured-addon, #monthly {
    .wrap > div  {
        max-height: 160px;
    }
}

#starter.feature {
    background: none;
}
#promos .feature {
    padding: 10px 78px;
}
#promos .control,
.carousel > a {
    &:hover {
        background: rgba(255,255,255,0.1);
        color: rgba(255,255,255, 0.3);
    }

    &:after {
        background: none;
        color: rgba(255,255,255, 1);
        height: 100%;
        border: 0;
        font-family: @primary-font;
        line-height: 260px;
        vertical-align: middle;
        border-radius: 0;
        box-shadow: none;
    }
}

.control {
    font-family: @primary-font !important;
}

#promos .prev {
    left: 0;
}
#promos .next {
    right: 0;
}
#promos h2, #promos h3 {
    font-style: normal;
    font-family: inherit;
}
#promos .promo h2, #promos .ryff h3 {
    font-size: 36px;
    font-weight: 100;
    line-height: 1.3em;
    color: #fff;
}
#promos h3 {
    color: #fff;
}
.promo h2 {
    text-shadow: none;
}


/* Featured/Monthly Add-on Carousel Element */
/* move icon to the left */
#featured-addon .wrap > div,
#monthly .wrap > div {
    display: block;
}
#featured-addon .blurb,
#featured-addon .thumb,
#monthly .blurb,
#monthly .thumb {
    display: block;
}
#featured-addon .blurb,
#monthly .blurb {
    max-width: 80%;
    float: right;
}
#featured-addon .thumb,
#monthly .thumb {
    float: left;
}

/*  */
#featured-addon > div, #go-mobile > div, #monthly > div, .addons li > a {
    border: 0;
    border-radius: 0;
    box-shadow: none;
    background: none;
    background-color: rgba(255, 255, 255, 0.0);
    transition-property: background-color;
}
.addons li > a:active, .addons li > a:focus, .addons li > a:hover {
    box-shadow: none;
    background-color: rgba(255, 255, 255, 0.2);
    transition-property: background-color;
}
.addons img {
    float: left;
    margin-right: 8px;
    margin-bottom: 3px;
}
.addons h3, #featured-addon h3, #monthly h3 {
    font-size: 1.2rem;
    line-height: 1.3rem;
    max-height: 1.2rem;
    font-weight: 200;
    text-align: left;
    padding-bottom: 5px;
}
.addons li > a:active h3,
.addons li > a:focus h3,
.addons li > a:hover h3 {
    text-decoration: none;
}
#featured-addon h3 a, #monthly h3 a {
    color: #fff;
}
.addons p.desc, #monthly .wrap p {
    max-height: 5.4em;
    font-size: 0.85rem;
    font-weight: 200;
    color: #fff;
    text-overflow: ellipsis;
    clear: both;
}

/* Side nav on Home */
.home #side-nav {
    /* pushed down to make room for more header */
    margin-top: 0;
}


/* Install Button */
.button,
button,
input[type="submit"] {
/* font: 700 13px/1em "Trebuchet MS",sans-serif;*/
    font-family: inherit;
    background: #5784BF;
    border-radius: 0;
    box-shadow: none;
    border: 0 none;
}
.button.add,
.button.good,
button.good {
    background: #489615;
}
.button.selected,
.button:active,
.button:focus,
.button:hover {
    box-shadow: 0 0 100px rgba(255, 255, 255, 0.2) inset;
}

#popular-extensions {
    margin-top: 0;
}

.secondary {
    margin: 12px 0;

    h2 {
        font-family: inherit;
        font-style: normal;
        font-weight: 700;
        text-transform: uppercase;
        color: #aaa;
    }

    li {
        border-color: lighten(desaturate(@primary-blue, 50%), 20%);
    }
}

.button.CTA {
    font-size: 16px;
    padding: 16px;
}

.island .pager {
    display: none;
}
#featured-extensions {
    padding-top: 0;
}
.sidebar-breakout h3, h2 {
    font: inherit;
    font-size: 1.25rem;
}

#footer {
    background-color: #fff;
    background-image: linear-gradient(to bottom,
      #fff 0,
      #fff 123px,
      rgba(12, 153, 213, 1) 123px,
      rgba(12, 153, 213, 1) 200px,
      #FFF 200px,
      rgba(12, 153, 213, 0.0) 400px);
    font-family: inherit;
    font-style: normal;
}
#lang_form {
     margin-top: 12px;
}

/* --------------------*/
/* Add-on Details Page */
/* --------------------*/
#page #breadcrumbs {
    display: none;
}
.addon-details .primary,
.addon-details .secondary {
    font-family: @primary-font !important;
}

#addon h1 {
    color: #fff;
}
.version-number {
    color: #ccc;
    font-size: .5em;
}
/* first block of details - icon, name, description ... */
.addon-details .primary:first-of-type{
    padding-bottom: 1em; /* */
    min-height: 257px; /* make sure it is at least as high as the background extends down */
}
.addon-details .secondary.addon-vitals {
    position: relative;
    z-index: 1;
}

#addon-description.prose {
     font-family: @primary-font;
}

/* DevHub */
#devhub-promo h2 strong {
    font-family: @primary-font;
}
#masthead h1 {
    margin-top: -5px;
}
/* Re-colors links on top of details page to white */
#addon a, .author a,
.addon-vitals .widgets .widget {
    color: #FFFFFF;
}
/* ... */

